GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/Compensation_Flat_Fee_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Compensation Flat Fee Rules</label>
</CustomObject>