GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/fields/Flat_Fee_Id__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee_Id__c</fullName>
    <externalId>true</externalId>
    <label>Flat Fee Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>