GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>