GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/fields/Traveler_Class__c.field-meta.xml
<CustomField>
    <fullName>Traveler_Class__c</fullName>
    <label>Traveler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>