GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/fields/Voucher_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Amount__c</fullName>
    <label>Voucher Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>