GearsetPOC/force-app/main/default/objects/Compensation_Flat_Fee_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Traveler_Class__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Voucher_Amount__c</columns>
    <columns>Flat_Fee_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>